[package]
name = "rakuza"
version = "0.1.0"
authors = ["Sebastian"]
edition = "2018"
build = "build.rs"

[features]
kiwami2 = []

[dependencies]
dont_disappear = "3.0.1"
memory-rs = { path = ".\\memory-rs"}
sysinfo = "0.14.1"
winapi = { version = "0.3.8", features = ["winuser", "impl-default"] }

[build-dependencies]
winres = "0.1"
