[package]
name = "common"
version = "1.0.0"
authors = ["Sebastian"]
edition = "2018"

[dependencies]
memory-rs = { git = "https://github.com/etra0/memory-rs" }
winapi = { version = "0.3.8", features = ["winuser", "impl-default"] }
anyhow = "1.0"
nalgebra-glm = "0.3"

[build-dependencies]
winres = "0.1"
cc = "1.0"
