[package]
name = "likeadragon"
version = "0.1.0"
authors = ["Sebastián Aedo <sebastian.aedo@sansano.usm.cl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
memory-rs = { path = "../../memory-rs"}
winapi = { version = "0.3.8", features = ["winuser", "xinput"] }
# Loggin dependencies
slog = { version = "2.5", features = ["max_level_trace", "release_max_level_warn"] }
slog-term = { version = "2.5" }
slog-async = { version = "2.5" }
slog-stdlog = { version = "4.1" }
slog-scope = { version = "4.3" }
log = { version = "0.4.11" }
simple_injector = { path = "../../simple_injector" }


nalgebra-glm = "0.3"

[build-dependencies]
winres = "0.1"
cc = "1.0"

[features]
non_automatic = []
ms_store = []

[lib]
crate-type = ["cdylib"]
name = "likeadragon"

[[bin]]
name = "likeadragon-freecam"
path = "src/main.rs"
