[package]
name = "likeadragon"
version = "0.1.0"
authors = ["Sebastián Aedo <sebastian.aedo@sansano.usm.cl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

# own libs
memory-rs = { git = "https://github.com/etra0/memory-rs"}
simple_injector = { git = "https://github.com/etra0/simple_injector" }

winapi = { version = "0.3.8", features = ["winuser", "xinput", "wincon", "consoleapi"] }

# Loggin dependencies
simplelog = "0.8"
log = "0.4.11"

anyhow = "1.0"

nalgebra-glm = "0.3"

[build-dependencies]
winres = "0.1"
cc = "1.0"

[features]
non_automatic = []

[lib]
crate-type = ["cdylib"]
name = "likeadragon"

[[bin]]
name = "likeadragon-freecam"
path = "src/main.rs"
